--- a/Exo/ExoMain/ExoMain/Script/Makefile
+++ b/Exo/ExoMain/ExoMain/Script/Makefile
@@ -4,7 +4,7 @@ OBJ = main.o pwm.o sensor.o controller.o valve.o
 
 #I= ../resource
 #CFLAGS=  -Wall -lrt -pthread
-CFLAGS = -Wall -pthread -lwiringPi
+CFLAGS = -Wall -pthread -lwiringPi -g
 
 all : exo_exe	
 
