successfully compilled in pi, recorder yet connected

--- a/Exo/ExoMain/ExoMain/Script/CMakeLists.txt
+++ b/Exo/ExoMain/ExoMain/Script/CMakeLists.txt
@@ -1,9 +1,9 @@
 cmake_minimum_required(VERSION 3.0.0)
 project(TestProject)
-set(CMAKE_CXX_FLAGS "-std=c++11 -Wall -pthread -lboost_serialization") #you can set with add_definitions("-Wall -std=c+11, etc")
-set(Boost_INCLUDE_DIR /home/lowlimb/Downloads/boost_1_70_0)
-set(Boost_LIBRARY_DIR /home/lowlimb/Downloads/boost_1_70_0/stage/lib)
-find_package(Boost COMPONENTS system filesystem serialization REQUIRED)
+set(CMAKE_CXX_FLAGS "-std=c++11 -Wall -pthread -lboost_serialization -lwiringPi") #you can set with add_definitions("-Wall -std=c+11, etc")
+set(Boost_INCLUDE_DIR /home/pi/Lib/boost_1_70_0)
+set(Boost_LIBRARY_DIR /home/pi/Lib/boost_1_70_0/stage/lib)
+find_package(Boost COMPONENTS serialization REQUIRED)
 
 include_directories(
     include
@@ -11,15 +11,20 @@ include_directories(
     ${Boost_INCLUDE_DIR}
 )
 add_library(
-    lib1 STATIC
-    include/lib1.hpp
-    include/lib1.cpp
+    lib STATIC
+    include/PWM.h
+    include/Sensor.h
+    include/Valve.h
+    include/Controller.h
+    include/Recorder.hpp 
+    include/RecData.hpp
 
 )
+set_target_properties(lib PROPERTIES LINKER_LANGUAGE CXX)
 link_directories(${Boost_LIBRARY_DIR})
 
 enable_testing()
-add_executable(hello_o src/main.cpp)
+add_executable(exo_o src/main.cpp include/Controller.cpp include/PWM.cpp include/Recorder.cpp include/Sensor.cpp include/Valve.cpp)
 
-target_link_libraries(hello_o PRIVATE lib1 ${Boost_LIBRARIES})
+target_link_libraries(exo_o PRIVATE ${Boost_LIBRARIES})
 
