remove all unnecessary output record valve condition and sensor data

--- a/Exo/ExoMain/ExoMain/Script/CMakeLists.txt
+++ b/Exo/ExoMain/ExoMain/Script/CMakeLists.txt
@@ -3,7 +3,7 @@ project(TestProject)
 set(CMAKE_CXX_FLAGS "-std=c++11 -Wall -pthread -lboost_serialization -lwiringPi") #you can set with add_definitions("-Wall -std=c+11, etc")
 set(Boost_INCLUDE_DIR /home/pi/Lib/boost_1_70_0)
 set(Boost_LIBRARY_DIR /home/pi/Lib/boost_1_70_0/stage/lib)
-find_package(Boost COMPONENTS serialization REQUIRED)
+find_package(Boost COMPONENTS serialization date_time filesystem REQUIRED)
 
 include_directories(
     include
