--- a/ExoPC/.vscode/settings.json
+++ b/ExoPC/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "python.pythonPath": "D:\\Anaconda\\envs\\exoData3\\python.exe"
+    "python.pythonPath": "/home/lowlimb/anaconda3/envs/exoData/bin/python",
+    "python.linting.pylintEnabled": true,
+    "python.linting.banditEnabled": false,
+    "python.linting.enabled": true
 }
