--- a/Exo/ExoMain/ExoMain/Script/CMakeLists.txt
+++ b/Exo/ExoMain/ExoMain/Script/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.0.0)
 project(TestProject)
-set(CMAKE_CXX_FLAGS "-std=c++17 -Wall -pthread -lwiringPi -o3 -g") #you can set with add_definitions("-Wall -std=c+11, etc")
+set(CMAKE_CXX_FLAGS "-std=c++17 -Wall -pthread -lwiringPi -g") #you can set with add_definitions("-Wall -std=c+11, etc")
 set(Boost_INCLUDE_DIR /home/pi/Lib/boost_1_71_0)
 set(Boost_LIBRARY_DIR /home/pi/Lib/boost_1_71_0/stage/lib)
 set(Eigen_INCLUDE_DIR /home/pi/Lib/eigen-eigen-323c052e1731)
@@ -14,6 +14,7 @@ include_directories(
 )
 add_library(
     lib STATIC
+    include/GPIOPin.hpp
     include/Recorder.hpp 
     include/RecData.hpp
     include/PWM.h
@@ -27,7 +28,7 @@ set_target_properties(lib PROPERTIES LINKER_LANGUAGE CXX)
 link_directories(${Boost_LIBRARY_DIR})
 
 enable_testing()
-add_executable(exo_o src/main.cpp include/Controller.cpp include/PWM.cpp include/Sensor.cpp include/Valve.cpp include/Displayer.cpp)
+add_executable(exo_o src/main.cpp include/Controller.cpp include/PWM.cpp include/Sensor.cpp include/Valve.cpp include/Displayer.cpp include/Pin.cpp)
 
 target_link_libraries(exo_o PRIVATE ${Boost_LIBRARIES})
 
