--- a/Exo/ExoMain/ExoMain/Script/CMakeLists.txt
+++ b/Exo/ExoMain/ExoMain/Script/CMakeLists.txt
@@ -19,6 +19,7 @@ add_library(
     include/PWM.h
     include/Valve.h
     include/Controller.h
+    include/BWFilter.hpp
     include/Sensor.h
     include/Displayer.hpp
 
@@ -27,7 +28,7 @@ set_target_properties(lib PROPERTIES LINKER_LANGUAGE CXX)
 link_directories(${Boost_LIBRARY_DIR})
 
 enable_testing()
-add_executable(exo_o src/main.cpp include/Controller.cpp include/PWM.cpp include/Sensor.cpp include/Valve.cpp include/Displayer.cpp)
+add_executable(exo_o src/main.cpp include/BWFilter.cpp include/Controller.cpp include/PWM.cpp include/Sensor.cpp include/Valve.cpp include/Displayer.cpp)
 
 target_link_libraries(exo_o PRIVATE ${Boost_LIBRARIES})
 
