set priority not sure it is working

--- a/Exo/ExoMain/ExoMain/Script/CMakeLists.txt
+++ b/Exo/ExoMain/ExoMain/Script/CMakeLists.txt
@@ -1,14 +1,35 @@
 cmake_minimum_required(VERSION 3.0.0)
 project(ExoController)
-set(CMAKE_SYSTEM_NAME Linux)
+set(CMAKE_SYSTEM_NAME Linux) 
 set(CMAKE_SYSTEM_PROCESSOR arm)
 
-set(CMAKE_CXX_FLAGS "-std=c++11 -Wall -pthread -o3") #you can set with add_definitions("-Wall -std=c+11, etc")
+#setup boost library
 set(Boost_INCLUDE_DIR /home/lowlimb/rpi-kernel/boost_1_71_0)
 set(Boost_LIBRARY_DIR /home/lowlimb/rpi-kernel/boost_1_71_0/stage/lib)
 
 set(CMAKE_C_COMPILER arm-linux-gnueabihf-gcc)
 set(CMAKE_CXX_COMPILER arm-linux-gnueabihf-g++)
+
+
+# set(XENO_CONFIG "/home/lowlimb/rpi-kernel/xenomai-3.0.7/target/usr/xenomai/bin/xeno-config")
+# set(XENO_CFLAG_PARAM  "--alchemy --cflags")
+# set(XENO_LDFLAG_PARAM  "--alchemy --ldflags")
+# execute_process(COMMAND bash -c "${XENO_CONFIG} ${XENO_CFLAG_PARAM}" 
+#                 OUTPUT_VARIABLE XENO_CFFLAGS
+#                 OUTPUT_STRIP_TRAILING_WHITESPACE)
+# execute_process(COMMAND bash -c "${XENO_CONFIG} ${XENO_LDFLAG_PARAM}"
+#                 OUTPUT_VARIABLE XENO_LDFLAG
+#                 OUTPUT_STRIP_TRAILING_WHITESPACE)
+
+# we can only set flags after we called xeno-config since xeno requires many flags when using make
+
+
+# we can only set flags after we called xeno-config since xeno requires many flags when using make
+
+# set(CMAKE_CXX_FLAGS "-std=c++17 -Wall -o3 -pthread ${XENO_CFFLAGS} ${XENO_LDFLAG}" ) #you can set with add_definitions("-Wall -std=c+11, etc")
+# set(CMAKE_C_FLAGS   "-std=c++17 -Wall -o3 -pthread ${XENO_CFFLAGS} ${XENO_LDFLAG}")
+set(CMAKE_CXX_FLAGS "-std=c++17 -Wall -o3 -pthread " ) #you can set with add_definitions("-Wall -std=c+11, etc")
+set(CMAKE_C_FLAGS   "-std=c++17 -Wall -o3 -pthread ")
 
 # Search for programs only in the build host directories
 set(CMAKE_FIND_ROOT_PATH_MODE_PROGRAM NEVER)
@@ -31,31 +52,23 @@ include_directories(
     ${Include_DIR}
     src
     ${Boost_INCLUDE_DIR}
-    ${Eigen_INCLUDE_DIR}
+    #${Eigen_INCLUDE_DIR}
+    #${Xenomai_INCLUDE_DIR}
     
 )
+file(GLOB HEAD_FILES ${Include_DIR}/*.h ${Include_DIR}/*.hpp})
 add_library(
     lib STATIC
-    ${Include_DIR}/common.hpp
-    ${Include_DIR}/Recorder.hpp 
-    ${Include_DIR}/RecData.hpp
-    ${Include_DIR}/Pin.h
-    ${Include_DIR}/PWM.h
-    ${Include_DIR}/Valve.h
-    ${Include_DIR}/PIDCon.h
-    ${Include_DIR}/FSMachine.hpp
-    ${Include_DIR}/Controller.h
-    ${Include_DIR}/BWFilter.hpp
-    ${Include_DIR}/Sensor.h
-    ${Include_DIR}/Displayer.hpp
+    ${HEAD_FILES}
+    
 
 
 )
 set_target_properties(lib PROPERTIES LINKER_LANGUAGE CXX)
-link_directories(${Boost_LIBRARY_DIR})
-
+link_directories(${Boost_LIBRARY_DIR}) 
 enable_testing()
-add_executable(exo_o src/main.cpp ${Include_DIR}/Pin.cpp ${Include_DIR}/BWFilter.cpp ${Include_DIR}/Controller.cpp ${Include_DIR}/PWM.cpp ${Include_DIR}/Sensor.cpp ${Include_DIR}/Valve.cpp ${Include_DIR}/Displayer.cpp ${Include_DIR}/PIDCon.cpp ${Include_DIR}/FSMachine.cpp)
+file(GLOB SRC_FILES ${Include_DIR}/*.cpp)
+add_executable(exo_o src/main.cpp ${SRC_FILES})
 
-target_link_libraries(exo_o PRIVATE ${Boost_LIBRARIES} )
+target_link_libraries(exo_o PRIVATE ${Boost_LIBRARIES}) 
 
