fixed all missing files, add lock to sensor

--- a/.gitignore
+++ b/.gitignore
@@ -31,8 +31,8 @@
 !/Exo/ExoMain/ExoMain/Script
 /Exo/ExoMain/ExoMain/Script/*
 !/Exo/ExoMain/ExoMain/Script/*.txt
-!/Exo/ExoMain/ExoMain/Script/include/*
-!/Exo/ExoMain/ExoMain/Script/src/*
+!/Exo/ExoMain/ExoMain/Script/include/
+!/Exo/ExoMain/ExoMain/Script/src/
 
 !/ExoPC/
 /ExpPC/*
